*Empty MediaWiki Message*

--- a/Lewis_Hamilton.mw
+++ b/Lewis_Hamilton.mw
@@ -79,11 +79,11 @@ By den brasiliaansken Grand Prix mos Hamilton minstens as vyvden endigen as Mass
 ===== Racistisk misbruuk =====
 In february wyr Hamilton verbål anevallen en up andere wys misbruukt tydens de testraces vöär et seisoon up et Circuit de Catalunya in Katalonie döär verskillende spaanske tooskowers dy swarte gesichtsvarv en swart prüüke hadden en ok shirts med de wöärde "De family van Hamilton". Hamilton wyr wyd en syd unpopulair in Spanje vanweagen syne rivaliteyt med synen spaansken vöärmåligen teammåt Fernando Alonso. De FIA wårskuweden spaanske autoriteyten vöär herhoaling van sülk gedrag en lancereden ne "Race teagen racisme" kampagne.
 
-Kört vöar den brasiliaansken Grand Prix van 2008 wyr ne websteade van den spaansken tak van advertentsybedryv TBWA uut New York enåmed "pinchalaruedadeHamilton" ("stekt Hamiltons banden lek") enöömd in de britske media. De websteade bevatteden ne eanimeerde avbeeldinge van Interlagos dat gebruukers de möägelikheyd gav üm spykers en stekkels up de båne too leggen wår de wågen van Hamilton oaverhen sol ryden. Under de duusende upmarkingen achterelåten sinds 2007 waren nen antal racistiske beledigingen. Synen rivål Fernando Alonso veroardeleden de racistiske supporters.
+Kört vöar den brasiliaansken Grand Prix van 2008 wyr ne websteade van den spaansken tak van advertentsybedryv TBWA uut New York enåmed "pinchalaruedadeHamilton" ("stekt Hamiltons banden lek") enöömd in de britske media. De websteade bevatteden ne eanimerede avbeeldinge van Interlagos dat gebruukers de möägelikheyd gav üm spykers en stekkels up de båne too leggen wår de wågen van Hamilton oaverhen sol ryden. Under de duusende upmarkingen achterelåten sinds 2007 waren nen antal racistiske beledigingen. Synen rivål Fernando Alonso veroardeleden de racistiske supporters.
 
 ==== Et seisoon van 2009: Nen frustrerend jår ====
 [[Bestaand:Hamilton_2009_Malaysian_GP_1.jpg|rechts|duum|Hamilton rydend vöär McLaren up den maleysisken Grand Prix van 2009.]]
-Hamilton begön de opener van et seisoon van 2009, den australisken Grand Prix, vanav de 18de startplåtse nådat McLaren nen starv had ekregen vöär et verwisselen van synen versnellingsbak tydens de kwalifikatsy. Hamilton profitereden van nen låten botsing tüsken Sebastian Vettel van Ferrari en Robert Kubica van BMW Sauber wårdöär hy upskoov når de veerde plåtse an et ende van de race. Hy wyr vervölgens epromoveerd töt darden nådat Jarno Trulli was estravt vöär et inhålen van hem under ümstandigheden med nen safety car. Tydens nen gesprek med de jüry nå de race vertelleden Hamilton en officials van McLaren de jüry dat sy Trulli neet upsettelik hadden låten passeren, wat låter teagenesprökken wyr döär de bekenntemåkede raceradiokommunikatsy van McLaren. Hamilton wyr vervölgens ediskwalificeerd van de race vöär et gevven van "misleidend bewys" tydens et gesprek med de jüry. Hy hevt sich låter persoonlik veruntskuldigd by de racedirekteur van de FIA Charlie Whiting vöär et elogen hebben by de racejüry. Hy ging verder döär et incident too beskryven as den swårsten weak van syn leaven en oaverwoog de Formule Eyn too verlåten.
+Hamilton begön de opener van et seisoon van 2009, den australisken Grand Prix, vanav de 18de startplåtse nådat McLaren nen strav had ekregen vöär et verwisselen van synen versnellingsbak tydens de kwalifikatsy. Hamilton profitereden van nen låten botsing tüsken Sebastian Vettel van Ferrari en Robert Kubica van BMW Sauber wårdöär hy upskoov når de veerde plåtse an et ende van de race. Hy wyr vervölgens epromoveerd töt darden nådat Jarno Trulli was estravt vöär et inhålen van hem under ümstandigheden med nen safety car. Tydens nen gesprek med de jüry nå de race vertelleden Hamilton en officials van McLaren de jüry dat sy Trulli neet upsettelik hadden låten passeren, wat låter teagenesprökken wyr döär de bekenntemåkede raceradiokommunikatsy van McLaren. Hamilton wyr vervölgens ediskwalificeerd van de race vöär et gevven van "misleidend bewys" tydens et gesprek med de jüry. Hy hevt sich låter persoonlik veruntskuldigd by de racedirekteur van de FIA Charlie Whiting vöär et elogen hebben by de racejüry. Hy ging verder döär et incident too beskryven as den swårsten weak van syn leaven en oaverwoog de Formule Eyn too verlåten.
 
 Hamilton scoreden weinig pünten by de Groute Prys van Maleysie, China en Bahrein. Hamiltons geluk verbetereden up de Hungaroring, de tynde runde van et seisoon, wår hy de race wön, 11.529 sekunden vöär Räikkönen wårmed hy de tynde oaverwinning van syne karriere pakkeden en de eyrste med nen wågen med KERS. De terügkeer van McLaren in vörm ging wyder in Valencia, wår Hamilton tweyds endigeden. By den singaporeesken Grand Prix pakkeden Hamilton syne tweyde oaverwinning van et seisoon. He endigeden dardes by de japanske en brasiliaanske Groute Prys. In den eyrsten Grand Prix van Abu Dhabi ging Hamilton an de leiding in de race, mår trök sich terügge in runde 20 due vanweagen nen probleem med den achterrem, syne eyrste terügtrekking in de Formule Eyn vanweagen nen technisk probleem.
 
@@ -118,26 +118,26 @@ Hamilton wön den hongaarsken Grand Prix up 29 jüly 2012 wårmed hy syne tweyde
 === Mercedes ===
 
 ==== Et seisoon van 2013: Eyrste oaverwinning med Mercedes ====
-[[Bestaand:Lewis_Hamilton_2013_Malaysia_FP2_2.jpg|duum|Hamilton during free practice at the 2013 Malaysian Grand Prix]]
-On 28 September 2012, it was announced after much speculation that Hamilton would be leaving McLaren after the 2012 season to join the Mercedes-Benz works team for the 2013 season onwards, partnering Nico Rosberg after signing a three-year contract with the team.<ref>{{cite news|url=https://www.bbc.co.uk/sport/0/formula1/19755236|title=Lewis Hamilton to leave McLaren after signing Mercedes contract|publisher=[[BBC Sport]]|date=28 September 2012|accessdate=28 September 2012|first=Andrew|last=Benson}}</ref><ref>{{cite news|url=https://www.theguardian.com/sport/feedarticle/10459232|title=Hamilton leaves McLaren for Mercedes|work=[[The Guardian]]|agency=[[Reuters]]|date=28 September 2012|accessdate=28 September 2012|first=Alan|last=Baldwin|location=London}}</ref>
+[[Bestaand:Lewis_Hamilton_2013_Malaysia_FP2_2.jpg|duum|Hamilton tydens ne vrye training van den maleysisken Grouten Prys van 2013.]]
+Up 28 september 2012 wyr anekondiged nå vöäl spekülatsy dat Hamilton McLaren sül verlåten nå et seisoon van 2012 season üm by et Mercedes-Benz bedryvsteam an too slüten vanav et seisoon van 2013, nevven Nico Rosberg nådat hy nen dreejårig konkrakt by et team had eteakened.
 
-In his first race weekend for Mercedes, the Australian Grand Prix, Hamilton qualified in third and ended the race in fifth place.<ref>{{cite web|url=https://www.bbc.co.uk/sport/0/formula1/21819227|title=Kimi Räikkönen wins ahead of Fernando Alonso|date=17 March 2013|work=BBC Sport|accessdate=21 May 2018}}</ref> Hamilton finished third in Malaysia to take his first podium for the team, although Nico Rosberg was prevented from attempting to overtake him by team orders.<ref>{{cite web|url=https://www.theguardian.com/sport/2013/mar/24/sebastian-vettel-wins-malaysia-gp|title=Sebastian Vettel leads home Mark Webber for dramatic Malaysian GP win|date=24 March 2013|work=Guardian UK|accessdate=21 May 2018}}</ref> At the following race in China, Hamilton secured his first pole position for Mercedes.<ref>{{cite web|url=https://www.telegraph.co.uk/sport/motorsport/formulaone/9989850/Chinese-Grand-Prix-2013-live.html|title=Chinese Grand Prix 2013: live|date=14 April 2013|work=Daily Telegraph|accessdate=21 May 2018}}</ref>
+In syn eyrsten raceweekend vöär Mercedes, den australisken Grand Prix, kwalificereden Hamilton sich as darden en beendigeden de race as vyvden. Hamilton endigeden dardes in Maleysie, wårmed hy syn eyrsten podium behåleden vöär et team, skonwal Nico Rosberg hem neet had möägen inhålen vanweagen teamorders. In de völgende race in China stelleden Hamilton syne eyrste pole position vöär Mercedes veilig.
 
-At Monaco after being out-qualified by his teammate Rosberg for the third successive race, Hamilton admitted that he was struggling to control the car under braking.<ref>{{cite news|url=https://www.bbc.co.uk/sport/0/formula1/22667887|title=Lewis Hamilton 'struggling' to drive Mercedes|first=Andrew|last=Benson|publisher=[[BBC Sport]]|date=25 May 2013|accessdate=31 July 2013}}</ref> Prior to the race, both Red Bull and Ferrari had lodged formal complaints against Mercedes for taking part in what was determined to be an illegal 1,000-kilometre (620{{convert|1000|km|mi|adj=on}} tyre test. Neither Mercedes drivers received any punishment for the breach of rules, and Mercedes was given a reprimand.<ref>{{cite news|url=https://www.bbc.co.uk/sport/formula1/22999260|title=Mercedes banned from Silverstone test over Pirelli 'tyregate'|publisher=[[BBC Sport]]|date=21 June 2013|accessdate=21 May 2018|first=Andrew|last=Benson}}</ref>
+In Monako, nådat hy vöär de darde mål up ry in de kwalifikatsy van ne race verslågen wyr döär synen teammåt Rosberg, gav Hamilton too dat hy moite had med et bestür van den wågen tydens et remmen. Vöär de race hadden sowal Red Bull as Ferrari formeel beklag egeaven teagen Mercedes vöär wat was vastestelled as deelnemmen an nen illegalen 1.000 kilometer bandentest - nen test van de banden nå 1000 kilometer gebruuk -. Gin van de Mercedes koureurs kreg nen strav vöär et brekken van reagels en Mercedes kreg nen wårsküwing.
 
-The Hungarian Grand Prix was Hamilton's first race win as a Mercedes driver, the first British driver to win a Formula One race in a Mercedes works car since Stirling Moss at the 1955 British Grand Prix, at Silverstone. Hamilton won the race from an unexpected pole position, eventually crossing the line nearly 11 seconds ahead of second-place finisher Kimi Räikkönen.<ref>{{cite news|url=http://www.racecar.com/Motorsport/News/Lewis-Hamilton-takes-pole-to-flag-victory-in-hungary/59153.htm|title=Lewis Hamilton takes pole to flag victory in Hungary|work=Racecar|publisher=Racecar New Media Services Ltd.|date=28 July 2013|accessdate=31 July 2013}}</ref> By winning the Hungarian Grand Prix, Hamilton continued his personal streak of winning at least one race prior to the mid-season break, and went into the summer break fourth in the Drivers' Championship.<ref>{{cite news|url=http://www.formula1.com/news/headlines/2013/7/14855.html|title=Hamilton seals his first win for Mercedes in Hungary|publisher=Formula One|date=28 July 2013|accessdate=31 July 2013|deadurl=yes|archiveurl=https://web.archive.org/web/20130731182019/http://www.formula1.com/news/headlines/2013/7/14855.html|archivedate=31 July 2013|df=dmy}}</ref> At the Belgian Grand Prix he secured his fifth and last pole position of the season and finished the race third. Although he did not score any podiums for the rest of the season, a string of point finishes helped him end the season in fourth place.<ref>{{cite web|url=http://www.dailymail.co.uk/sport/formulaone/article-2401832/Sebastian-Vettel-clear-Lewis-Hamilton-British-bid-crushed-Red-Bull-master-senses-fourth-F1-title.html?ito=feeds-newsxml|title=British bid crushed as Red Bull master senses fourth world title|date=25 August 2013|work=Daily Mail|accessdate=21 May 2018}}</ref>
+Den hongaarsken Grand Prix was de eyrste oaverwinning van Hamilton as Mercedes koureur, den eyrsten britsken koureur den ne Formule Eynrace in nen Mercedes bedryvswågen wint sinds Stirling Moss in den britsken Grand Prix van 1955 up Silverstone. Hamilton wön de race van ne unverwachte eyrste startpositsy, wårby hy uutendelik 11 sekunden vöär nümmer twey Kimi Räikkönen oaver de lyne kwam. Döär et winnen van den hongaarsken Grand Prix beheeld Hamilton syne persoonlike reeks van minstens eyn race vöär den stop in et midden van et seisoon too winnen en stünd tydens den sommerstop veerdes in et individuelen kampioonskap. By den belgisken Grand Prix behåleden hy syne vyvde en låtste pole position van et seisoon en beendigeden de race as darden. Skonwal hy de reste van et seisoon gin podiums  meyr behåleden, heelp ne reeks finishes med pünten hem veerdes too endigen an et ende van et seisoon.
 
-==== 2014 season: Second world title ====
-[[Bestaand:Lewis_Hamilton_2014_China_Race.jpg|duum|Hamilton at the 2014 Chinese Grand Prix. By winning the race, Hamilton achieved three consecutive wins for the first time in his Formula One career.]]
-A new rule for the 2014 season allowed the drivers to pick a unique car number to use for their entire career. Hamilton picked 44, the same number he used during his karting days.<ref>{{cite web|url=http://news.ph.msn.com/sports/numbers-up-for-2014-formula-one-drivers-3|archiveurl=https://web.archive.org/web/20140113220941/http://news.ph.msn.com/sports/numbers-up-for-2014-formula-one-drivers-3|title=Numbers up for 2014 Formula One drivers|publisher=MSN News|date=10 January 2014|archivedate=13 January 2014|accessdate=5 July 2015}}</ref>
+==== Et seisoon van 2014: Tweyde werldtitel ====
+[[Bestaand:Lewis_Hamilton_2014_China_Race.jpg|duum|Hamilton by den Grouten Prys van China van 2014. Döär de race too winnen behåleden Hamilton vöär et eyrst in syne Formule Eynkarriere dree oaverwinningen up nen ry.]]
+Nen nyen reagel in et seisoon van 2014 stünd koureurs too üm nen ünyk wågennümmer too kysen vöär de reste van öäre karriere. Hamilton koos 44, et sülvden nümmer dat hy in synen karttyd gebrükeden.
 
-After pre-season testing in Jerez, Mercedes were widely considered favourites for 2014<ref>{{cite news|url=http://www.skysports.com/f1/news/22058/9192860/what-weve-learnt-at-bahrain-test-two|title=What we've learnt at Bahrain Test Two|date=4 March 2014|work=[[Sky Sports]]|first=Pete|last=Gill|accessdate=21 May 2018}}</ref> as they appeared to hold a considerable speed advantage over other teams. This was realised at the Australian Grand Prix where Hamilton took pole. He was forced to retire, but Rosberg dominated to win by over 20 seconds.<ref>{{cite news|url=https://www.telegraph.co.uk/sport/motorsport/formulaone/10700931/Australian-Grand-Prix-Daniel-Ricciardo-disqualified-after-finishing-second-behind-dominant-Nico-Rosberg.html|title=Daniel Ricciardo disqualified after finishing second behind dominant Nico Rosberg|date=16 March 2014|work=[[The Daily Telegraph]]|first=Daniel|last=Johnson|accessdate=21 May 2014}}</ref> In Malaysia, Hamilton's potential was realised when he won from pole in a Mercedes 1–2, the first since 1955.<ref>{{cite news|url=https://www.telegraph.co.uk/sport/motorsport/formulaone/mercedes/10732592/Malaysian-Grand-Prix-2014-Lewis-Hamilton-secures-maiden-victory-in-Sepang-as-Mercedes-complete-one-two.html|title=Lewis Hamilton secures maiden victory in Sepang as Mercedes complete one–two|date=30 March 2014|work=[[The Daily Telegraph]]|first=Daniel|last=Johnson|accessdate=21 May 2014}}</ref> In Bahrain, Mercedes were unstoppable with Rosberg claiming pole in a Mercedes front-row lock-out. Hamilton got a better start but still battled hard with Rosberg through the early part of the race. Mercedes chose split strategies for their drivers, and Hamilton opened up a gap on the faster option tyres. But the safety car was called out after Esteban Gutiérrez' Sauber was struck by Pastor Maldonado's Lotus. Hamilton was forced to battle Rosberg in a gripping race to the finish with tight wheel-to-wheel racing. In the end Hamilton won, taking consecutive victories for the first time since the 2010 season, when he won in Turkey and Canada.<ref>{{cite news|url=https://www.telegraph.co.uk/sport/motorsport/formulaone/10748343/Bahrain-Grand-Prix-2014-Lewis-Hamilton-leads-Mercedes-one-two-ahead-of-team-mate-Nico-Rosberg.html|title=Lewis Hamilton leads Mercedes one–two ahead of team-mate Nico Rosberg|date=6 April 2014|work=[[The Daily Telegraph]]|first=Daniel|last=Johnson|accessdate=21 May 2014}}</ref>
-[[Bestaand:Hamilton_and_Putin.jpg|links|duum|Hamilton is congratulated by [[Vladimir Poetin|Vladimir Putin]], the president of Russia, after winning the inaugural Russian Grand Prix in 2014.]]
-Mercedes' dominance was further confirmed in China where Hamilton took pole and then led every lap of the race while his teammate finished second. This completed a hat-trick of wins, the first of Hamilton's career.<ref>{{cite news|url=https://www.telegraph.co.uk/sport/motorsport/formulaone/lewishamilton/10776853/Chinese-Grand-Prix-2014-Lewis-Hamilton-leads-from-start-to-finish-to-record-third-successive-victory.html|title=Lewis Hamilton leads from start to finish to record third successive victory|date=20 April 2014|work=[[The Daily Telegraph]]|first=Daniel|last=Johnson|accessdate=21 May 2014}}</ref> Mercedes continued to dominate in Spain where Hamilton once again set pole position and went on to win the race&nbsp;– his fourth successive win&nbsp;– despite close competition from teammate Nico Rosberg who finished in second place.<ref>{{cite news|url=https://www.telegraph.co.uk/sport/motorsport/formulaone/10823149/Lewis-Hamilton-wins-Spanish-Grand-Prix-to-go-top-of-F1-drivers-championship.html|title=Lewis Hamilton wins Spanish Grand Prix to go top of F1 Drivers' Championship|date=11 May 2014|work=[[The Daily Telegraph]]|first=Daniel|last=Johnson|accessdate=21 May 2014}}</ref> At Monaco, Hamilton qualified 2nd behind Rosberg. Rosberg was investigated by the stewards after he went down the escape road at the Mirabeau corner. The resulting yellow flags forced Hamilton to back off in the final moments of the session, which could have cost Hamilton a chance at pole position.<ref>{{cite news|title=Nico Rosberg's Monaco pole is under investigation after his Q3 off|url=http://www.autosport.com/news/report.php/id/114106|accessdate=24 May 2014|work=[[Autosport]]|date=24 May 2014|first1=Jonathan|last1=Noble|first2=Matt|last2=Beer}}</ref> Rosberg was cleared of any wrongdoing in that incident. Rosberg won the race with Hamilton finishing second. During qualifying for the German Grand Prix, Hamilton had a brake failure and started 20th but managed to finish third.<ref>{{cite news|title=2014 Formula 1 Grosser Preis Santander von Deutschland|url=http://www.formula1.com/results/season/2014/925/7371/|publisher=Formula One|date=20 July 2014|accessdate=20 July 2014|deadurl=yes|archiveurl=https://web.archive.org/web/20140722225321/http://www.formula1.com/results/season/2014/925/7371/|archivedate=22 July 2014|df=dmy}}</ref> An engine fire in qualifying for the Hungarian Grand Prix meant he would start from the pit lane from where he again managed to climb to third ahead of Rosberg, despite being ordered by his race engineer to let his teammate past.<ref>{{cite news|url=https://www.theguardian.com/sport/2014/aug/21/lewis-hamilton-unruffled-mercedes-meeting-team-orders-belgium-gp-formula-one|newspaper=The Guardian|location=London|date=21 August 2014|title=Lewis Hamilton unruffled by Mercedes meeting on team orders at Spa|first=Giles|last=Richards}}</ref>
+Nå test vöärav an et seisoon in Jerez wyr Mercedes wyds as favoryt esen vöär 2014 ümdat sy nen seaker snelheydsvöärdeyl lekken too hebben oaver andere teams. Dit wyr wåremåked by den australisken Grand Prix wår Hamilton de eyrste startpositsy behåleden. Hy mos upgeaven, mår Rosberg dominereden en wön med meyr as  20 sekunden. In Maleysie wyr Hamiltons potentieel wåremåked terwyl hy van de eyrste startpositsy wön in nen 1-2 van Mercedes, den eyrsten sinds 1955. In Bahrein was Mercedes neet too stoppen terwyl Rosberg de eyrste startpositsy had wårby Mercedes den eyrsten ry -de eyrste twey positsys- besetteden. Hamilton had ne bettere start mår had noch nen swår gevecht med Rosberg in et eyrsten deal van de race. Mercedes koos verskillende startegyen vöär öäre koureurs en Hamilton måkeden nen gat med de snellere banden. Mår den safety car wyr inesettet nådat den Sauber van Esteban Gutiérrez was eråked döär den Lotus van Pastor Maldonado. Hamilton mos den stryd angån med Rosberg in ne medsleppende race når de finish med ne spannende wyl-teagen-wylrace. Uutendelik wön Hamilton, wårmed hy vöär et eyrst sinds et seisoon van 2010 twey oaverwinningen up nen ry behåleden, doo hy in Türkeye en Kanada wön.
+[[Bestaand:Hamilton_and_Putin.jpg|links|duum|Hamilton wördet efelisiteard döär [[Vladimir Poetin|Vladimir Putin]], de president van Rüsland, nå et winnen van den eysten rüssisken Grand Prix in 2014.]]
+De dominantsy van Mercedes wyr wyder bevestiged in China wår Hamilton de eyrste startpositsy behåleden en dan elke runde an de leiding reed terwyl synen teammåt tweyds endigeden. Dit måkeden nen dreetal van oaverwinningen up ry kompleet, et eyrsten in de karriere van Hamilton. Mercedes ging wyder med domineren in Spanje wår Hamilton upny de eyrste startpositsy behåleden en wön&nbsp;– syne veerde oaverwinning achtereyn – undanks starke kompetitsy van teammåt Nico Rosberg den tweyds endigeden. In Monako kwalificereden Hamilton sich as tweyden achter Rosberg. Rosberg wyr döär de jüry undersucht nådat hy de untsnappingsroute had enömmen by den Mirabeau-hook. De upvölgende geyle vlaggen verplichteden Hamilton in too holden an et ende van de sessy, wat Hamilton nen kans up de eyrste startpositsy had können kosten. Rosberg wyr vryesprökken van eynige fout in dat incident. Rosberg wön de race terwyl Hamilton tweyds endigeden. Tydens de kwalifikatsy van den düütsken Grand Prix deden de remmen van Hamilton et neet en mos hy as twintigsten starten mår hy kon dardes endigen. Nen motorbrand by de kwalifikatsy vöär den hongaarsken Grand Prix beteakeneden dat hy achteran in de pitstråte mos starten van wår hy weerüm dardes kon wörden, vöär Rosberg, skonwal hy van synen raceingenieur synen teammåt vöärby mos låten gån.
 
-At the first race after the summer break in Belgium, Hamilton took the lead from Rosberg at the start but a collision between them on lap two punctured his rear tyre and he later retired from the race.<ref>{{cite news|url=https://www.theguardian.com/sport/2014/aug/24/daniel-ricciardo-lewis-hamilton-nico-rosberg-grand-prix|title=Daniel Ricciardo wins F1's Belgian GP as Hamilton-Rosberg spat reignites|date=24 August 2014|newspaper=The Guardian|location=London|accessdate=26 August 2014}}</ref> He then won the Italian,<ref>{{cite web|url=http://www.dailymail.co.uk/sport/formulaone/article-2747101/Lewis-Hamilton-wins-Italian-Grand-Prix-conspiracy-theorists-claim-Mercedes-rigged-race-moves-closer-Nico-Rosberg.html|title=Lewis Hamilton wins Italian Grand Prix as conspiracy theorists claim Mercedes rigged race that moves him closer to Nico Rosberg|date=7 September 2014|work=Daily Mail|accessdate=23 September 2014}}</ref> and Singapore Grands Prix<ref>{{cite news|url=https://www.nytimes.com/2014/09/22/sports/autoracing/lewis-hamilton-wins-singapore-grand-prix-grabs-lead-for-drivers-title.html|title=Lewis Hamilton Wins Singapore Grand Prix and Grabs Lead for Drivers' Title|date=21 September 2014|work=The New York Times|accessdate=23 September 2014}}</ref> each from pole to take the lead in the Drivers' Championship. This was followed by victories at the Japanese Grand Prix&nbsp;– which was stopped due to heavy rain&nbsp;– the Russian and United States Grands Prix to achieve five consecutive victories for the first time in his career. His tenth victory of the season was also his 32nd career victory, the most of any British driver. Hamilton became the World Champion after winning the Abu Dhabi Grand Prix, beating teammate Rosberg by 67 points, after Rosberg's car developed mechanical trouble during the race. Hamilton said in the podium interview "This is the greatest day of my life".<ref>{{cite web|url=https://www.mirror.co.uk/sport/formula-1/lewis-hamilton-revels-greatest-day-4681683|website=Mirror Online|title=Lewis Hamilton revels in 'greatest day of my life' after becoming a double F1 world champion|accessdate=24 November 2014}}</ref> At the end of the year, Hamilton received the BBC Sports Personality of the Year Award.<ref>{{cite web|url=https://www.bbc.com/sport/sports-personality/30473581|title=Lewis Hamilton wins BBC Sports Personality of the Year award 2014|website=[[BBC]]|date=14 December 2014|access-date=16 December 2015}}</ref>
+By de eyrste race nå den sommerstop in Belgie, nam Hamilton de leiding van Rosberg oaver by de start mår ne botsing tüsken öär in de tweyde runde gav hem nen lekken band en hy trök sich låter terüg uut de race. Dårnå wön hy de italiaanske en singaporeeske Groute Prys, beide van de eyrste startpositsy, wårmed hy de leiding nam in et kampioonskap. Dit wyr evolged döär oaverwinningen in den japansken Grand Prix&nbsp;– den wyr underbrökken döär heavigen reagenval&nbsp;– en de Groute Prys van Rüsland en de Vereynigde Ståten wårmed hy vöär et eyrst in syne karriere vyv oaverwinningen up nen ry behåleden. Syne tynde oaverwinning van et seisoon was ok de 32e van syne karriere, de meyste oaverwinningen van alle britske koureurs. Hamilton wyr werldkampioon nådat hy den Grouten Prys van Abu Dhabi wön, hy versloog teammåt Rosberg med 67 pünten, nådat den wågen van Rosberg mechaniske probleymen kreg tydens de race. Hamilton sei in et vråggesprek by et podium "Dit is den besten dag van myn leaven". An et ende van et jår, untving Hamilton den prys vöär de sportpersoonlikheyd van et jår van de BBC.
 
-==== 2015 season: Third world title ====
+==== Et seisoon van 2015: Darde werldtitel ====
 [[Bestaand:Lewis_Hamilton_2015_Malaysia_FP3_1.jpg|duum|Hamilton at the 2015 Malaysian Grand Prix]]
 Hamilton enjoyed a continuation of Mercedes' dominance heading into the 2015 season, as the new W06 Hybrid completed more laps in pre-season testing than any rival car, and did so using just one power unit.<ref>{{cite news|url=http://www1.skysports.com/f1/news/12472/9739841/toto-wolff-reveals-that-mercedes-used-just-one-engine-during-pre-season-testing|title=Toto Wolff reveals that Mercedes used just one engine during pre-season testing|work=[[Sky Sports]]|publisher=[[Sky (United Kingdom)|BSkyB]]|date=2 March 2015|accessdate=20 March 2015}}</ref> At the opening race in Australia, Hamilton qualified in pole position, 0.594 seconds quicker than teammate Rosberg and 1.391 seconds clear of Felipe Massa's Williams in third.<ref>{{cite news|url=https://www.bbc.co.uk/sport/0/formula1/31885105|title=Lewis Hamilton on pole in Australia ahead of Nico Rosberg|first=Andrew|last=Benson|publisher=[[BBC Sport]]|date=14 March 2015|accessdate=20 March 2015}}</ref> Hamilton then won the race ahead of Rosberg in second, with Sebastian Vettel's Ferrari in third, 34 seconds back.<ref>{{cite news|url=https://www.bbc.co.uk/sport/0/formula1/31893665|title=Lewis Hamilton wins with ease in Australia as only 11 cars finish|first=Andrew|last=Benson|publisher=[[BBC Sport]]|date=15 March 2015|accessdate=20 March 2015}}</ref> In Monaco he lost first position to his teammate Rosberg after leading the race for 65 laps due to a pit-stop error made by his team, eventually finishing third.
 [[Bestaand:Hamilton_Canada_2015.jpg|links|duum|Hamilton celebrating victory at the 2015 Canadian Grand Prix]]
