*Empty MediaWiki Message*

--- a/Lewis_Hamilton.mw
+++ b/Lewis_Hamilton.mw
@@ -1,4 +1,4 @@
-'''Lewis Carl Davidson Hamilton''' <small>MBE</small> (geboaren 7 january 1985) is nen britsk autokoureur den rydet in de [[Formule Eyn]] vöär [[Mercedes AMG Petronas]]. Synde nen veermålig Formule Eyn werldkampioon, wördt hy våke beskowd as den besten koureur van syn generaty en wyd eseen as eyn van de gröytste koureurs in de geskydenis van den sport. Hy wön syne eyrste werldkampioonskapstitel med [[McLaren]] in 2008, dårnå verhüseden hy når Mercedes, wår hy twey titels achter mekare wön in 2014 en 2015 vöär et winnen van syne veerde titel in 2017. As statistisk den suksesvülsten britsken koureur in de geskydenis van den sport, hevt Hamilton meyr werldkampioonskapstitels (4) en meyr raceoaverwinningen (70) as eynig ander britsk koureur in de Formule Eyn. Hy hevt ok de rekords vöär de meyste karierrepunten allertyden (2916), oaverwinningen up et höygste antal verskillende circuits (26), de meyste pole positions allertyden (79) en de meyste grand slams in eyn seisoon (3).
+'''Lewis Carl Davidson Hamilton''' <small>MBE</small> (geboaren 7 january 1985) is nen britsk autokoureur den rydet in de [[Formule Eyn]] vöär [[Mercedes AMG Petronas]]. Synde nen veermålig Formule Eyn werldkampioon, wördet hy våke beskowd as den besten koureur van syne generatsy en wyd esen as eynen van de gröytste koureurs in de geskydenis van den sport. Hy wön syne eyrste werldkampioonskapstitel med [[McLaren]] in 2008, dårnå verhüseden hy når Mercedes, wår hy twey titels achter mekare wön in 2014 en 2015 vöär et winnen van syne veerde titel in 2017. As statistisk den suksesvülsten britsken koureur in de geskydenis van den sport, hevt Hamilton meyr werldkampioonskapstitels (4) en meyr raceoaverwinningen (70) as eynig ander britsk koureur in de Formule Eyn. Hy hevt ok de rekords vöär de meyste karierrepunten allertyden (2916), oaverwinningen up et höygste antal verskillende circuits (26), de meyste pole positions allertyden (79) en de meyste grand slams in eyn seisoon (3).
 
 Terwyl hy geboaren wyr en upegröieden in [[Stevenage]], [[Hertfordshire]], begön Hamiltons interesse in et racen doo syn våder hem nen radiografisk bestüürbåren auto köcheden as hy sesse waren. Hy teakenden by McLarens Young Driver Support Programme in 1998, nådat hy McLaren teambaas Ron Dennis benadereden by nen uutreikingsceremony dree jår dårvöär en sei "up nen dag wül ik in ow wågens ryden". Nå et winnen van de [[britske Formule Renault]], [[Formule 3 Euro Series]] en [[GP2]] kampioonskappen, underweg ümhoog up de racekarrierelere, maken hy twålv jår nå syn eyrste üntmoting med Dennis syn Formule Eyn-debuut vöär McLaren in 2007. Ümdat hy van nen emengeden achtergrund kümt, med nen swarten våder en ne witte moder, is Hamilton den eyrsten en eynigen swarten koureur den in de Formule Eyn rydt.
 
